@@ -55,6 +55,8 @@ if NOT defined JAVA_HOME (
 
 @REM If this is a Java 9 JDK, add some JDK 9 workarounds to the JVM_ARGS
 if exist "%JAVA_HOME%\lib\modules" set JVM_ARGS=--add-opens java.base/java.lang=ALL-UNNAMED --add-exports java.base/sun.security.action=ALL-UNNAMED !JVM_ARGS!
+@REM If this is a Java 17 JDK, add some JDK 9 workarounds to the JVM_ARGS
+if exist "%JAVA_HOME%\jmods\openjceplus.jmod" set JVM_ARGS=--add-exports openjceplus/com.ibm.misc=ALL-UNNAMED !JVM_ARGS!
 
 set JVM_ARGS=-Djava.awt.headless=true !JVM_ARGS!
 set TOOL_JAVA_CMD_QUOTED=!JAVA_CMD_QUOTED! !JVM_ARGS! -jar "!WLP_INSTALL_DIR!\bin\@TOOL_JAR@"
